--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: left;
   justify-content: left;
+  text-align: left;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -48,4 +49,14 @@ button {
 
 li {
   list-style: none;
+}
+
+input[type="text"] {
+  background-color: darkcyan;
+  color: white;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 6px;
+  padding-right: 6px;
+  font-size: calc(8px + 1vmin)
 }
